--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body, html{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     background-image: linear-gradient(rgb(158, 200, 255), rgb(0, 132, 255));
-
+    overflow: hidden;
 }
 #navbar{
     position: absolute;
@@ -77,7 +77,7 @@ body, html{
 #cxCards{
     display: flex;
     flex-direction: row;
-    max-width: 1300px;
+    max-width: 800px;
     overflow-y: hidden;
     overflow-x: scroll;
 }
@@ -91,4 +91,10 @@ body, html{
     justify-content: center;
     align-items: center;
     display: flex;
+}
+
+@media (max-width: 400px) {
+    .cxNav{
+        display: block;
+    }
 }
