--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body, html{
     justify-content: center;
     align-items: center;
     display: flex;
-    transition: 0.5s ;
+    transition: all 0.5s;
 }
 #btnRes{
     display: none;
@@ -129,6 +129,7 @@ body, html{
     }
     #navbar.active .cxNav{
         visibility: visible;
+        transform: none;
         /* display: flex; */
     }
     .cxNav a{
