--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12pt;
+    color: aliceblue;
 }
 body, html{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width: 100%; */
-    height: 100%;
-    /* background-image: linear-gradient(rgb(158, 200, 255), rgb(0, 132, 255)); */
+    width: 100vw;
+    height: 100vh;
     background-color: aliceblue;
     overflow: hidden;
 }
@@ -22,7 +22,7 @@ body, html{
     background-color: rgb(46, 154, 255);
     width: 100%;
     z-index: 100;
-    padding: 4px;
+    padding-top: 4px;
     display: flex;
     justify-content: space-around;
 }
@@ -53,6 +53,7 @@ body, html{
     border: none;
     color: aliceblue;
     background-color: rgb(46, 154, 255);
+    border-radius: 5px;
     box-shadow: 1px 1px 3px black;
     cursor: pointer;
     color: rgb(255, 255, 255);
@@ -87,16 +88,19 @@ body, html{
     visibility: hidden;
 }
 section{
-    padding: 10px;
-    margin-top: 80px;
+    height: 100%;
+    margin-top: 120px;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .card{
     width: 500px;
     height: 265px;
-    background-color: rgb(143, 188, 228);
     padding: 10px;
-    border-radius: 15px;
     margin-left: 15px;
+    border-bottom: 1px solid black;
 }
 .cxImg{
     width: 150px;
@@ -105,12 +109,22 @@ section{
 .txtFreelancer{
     padding: 5px;
     text-align: justify;
+    color: black;
 }
 .cxSuper{
     width: 100%;
     display: flex;
     justify-content: space-around;
     margin-bottom: 20px;
+}
+
+.cxTitulo{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-repeat: no-repeat;
+    height: 200px;
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn6Lrd2FrgIjIkkJA6DSGKjsZ6yVL0m_xHaw&usqp=CAU');
 }
 @media (max-width: 600px) {
     .cxNav{
@@ -156,6 +170,7 @@ section{
     }
     .cxCards{
         max-width: 300px;
+        height: 100%;
     }
     .card{
         width: 300px;
@@ -164,8 +179,6 @@ section{
         align-items: center;
         background-color: aliceblue;
         padding: 10px;
-        border-radius: 15px;
-        margin-left: 15px;
     }
     .cxImg{
         width: 100%;
@@ -174,5 +187,15 @@ section{
         align-items: center;
         padding: 10px 0 0 0;
         margin-bottom: 10px;
+    }
+    .cxTitulo{
+        background-size: 100%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        background-repeat: no-repeat;
+        background-image: linear-gradient(rgb(46, 154, 255), rgba(46, 154, 255, 0.6)),
+            url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn6Lrd2FrgIjIkkJA6DSGKjsZ6yVL0m_xHaw&usqp=CAU');
     }
 }
