--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12pt;
-    color: aliceblue;
+    /* color: aliceblue; */
 }
 body, html{
     display: flex;
@@ -99,7 +99,6 @@ section{
     width: 500px;
     height: 265px;
     padding: 10px;
-    margin-left: 15px;
     border-bottom: 1px solid black;
 }
 .cxImg{
@@ -117,7 +116,9 @@ section{
     justify-content: space-around;
     margin-bottom: 20px;
 }
-
+h1{
+    color: aliceblue;
+}
 .cxTitulo{
     justify-content: center;
     align-items: center;
@@ -197,5 +198,8 @@ section{
         background-repeat: no-repeat;
         background-image: linear-gradient(rgb(46, 154, 255), rgba(46, 154, 255, 0.6)),
             url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTn6Lrd2FrgIjIkkJA6DSGKjsZ6yVL0m_xHaw&usqp=CAU');
+    }
+    .cxSuper{
+        display: block;
     }
 }
